[DOM8-52] more cards working now